some change in navbar

--- a/index.html
+++ b/index.html
@@ -24,24 +24,29 @@
             <p> Explore
                 <span> Plus <img src="image/plus_aef861.png" alt=""></span>
             </p>
+
         </div>
-        <div class="navbar-input">
-            <input type="text" name="search for product,brand and more" id="" placeholder="search for product, brands and more">
-        </div>
+        <input type="text" name="" id="" placeholder="Search for product, brands and more">
         <button>
             Login
         </button>
+
         <div class=" navbar-head-content">
-            <p>Become a seller</p>
-            <p> More <i class="fa-light fa-angle-down"></i></p>
-            <p> <i class="fa-regular fa-cart-shopping"></i>Cart</p>
+            <p>Become a Seller</p>
+            <p> More
+                <i class="fa-solid fa-angle-down"></i>
+            </p>
+            <p><i class="fa-solid fa-cart-shopping"></i>
+                Cart</p>
         </div>
     </div>
+
+
     <!-- navbar section end here -->
 
     <main>
-         <!-- slider section start here -->
-         <div class="category-section">
+        <!-- slider section start here -->
+        <div class="category-section">
             <div class="category-head">
                 <img src="image/grocery.webp" alt="">
                 <p> Grocery</p>
@@ -82,15 +87,15 @@
                 <img src="image/tow wheelers.webp" alt="">
                 <p> Two Wheelers</p>
             </div>
-         </div>
-         <!-- slider section end here -->
-         <!-- slider image start here -->
-         <div class="slider-image">
+        </div>
+        <!-- slider section end here -->
+        <!-- slider image start here -->
+        <div class="slider-image">
             <img src="image/sli.webp" alt="">
-         </div>
-         <!-- slider image end here -->
-         <!-- electronic section start here -->
-         <div class="electronic-section">
+        </div>
+        <!-- slider image end here -->
+        <!-- electronic section start here -->
+        <div class="electronic-section">
             <div class="electronic-head-left">
                 <p>Best Of Electronics</p>
                 <button> View All</button>
@@ -114,7 +119,7 @@
                 </div>
                 <div class="electronic-head-content">
                     <img src="image/mobile cover.webp" alt=""> <br>
-                    <p> Designer Cases & Covers</p> 
+                    <p> Designer Cases & Covers</p>
                     <span>Just <i class="fa-solid fa-indian-rupee-sign"></i>169</span>
                     <br>
                     <span class="greycolor"> For Top Models</span>
@@ -150,10 +155,10 @@
                     <span class="greycolor"> Sony , Canon,Samsung</span>
                 </div>
             </div>
-         </div>
-         <!-- Electronics section end here -->
-         <!-- Beauty section start here -->
-         <div class="beauty-section">
+        </div>
+        <!-- Electronics section end here -->
+        <!-- Beauty section start here -->
+        <div class="beauty-section">
             <div class="beauty-head-left">
                 <p>Beauty,Food ,Toy & More</p>
                 <button>VIEW ALL</button>
@@ -189,11 +194,134 @@
                     <span>From<i class="fa-solid fa-indian-rupee-sign"></i>79</span>
                     <span class="greycolor">Unmissable Offers!</span>
                 </div>
-                
+            </div>
+        </div>
+        <!-- beauty section end here -->
 
+        <!-- summer section start here -->
+        <div class="summer-section">
+            <div class="summer-head left">
+                <p>Shop For a cool Summer</p>
+                <button> VIEW ALL</button>
+            </div>
+            <div class="summer-head-right">
+                <div class="summer-head-content">
+                    <img src="image/slippers.webp" alt="">
+                    <p> Slippers & Flip Flop</p>
+                    <span>Min 70% Off</span>
+                </div>
+                <div class="summer-head-content">
+                    <img src="image/watterbottel.webp" alt="">
+                    <p> Water Bottles</p>
+                    <span>Min 50% Off</span>
+                </div>
+                <div class="summer-head-content">
+                    <img src="image/rucksacks.webp" alt="">
+                    <p> Rucksacks</p>
+                    <span>Min 70% Off</span>
+                </div>
+                <div class="summer-head-content">
+                    <img src="image/womennight.webp" alt="">
+                    <p> Women Night Suits</p>
+                    <span>Min 50% Off</span>
+                </div>
+                <div class="summer-head-content">
+                    <img src="image/mensshotrs.webp" alt="">
+                    <p> Men Shorts</p>
+                    <span>Min 50% Off</span>
+                </div>
+                <div class="summer-head-content">
+                    <img src="image/kids.webp" alt="">
+                    <p> Kid's Three-Fourths</p>
+                    <span>Explore Now</span>
+                </div>
+            </div>
+        </div>
+        <!-- summer section End here -->
+
+        <!-- sport section start here -->
+        <div class="sport-section">
+            <div class="sport-head-left">
+                <p>sport, Healthcare & More</p>
+                <button> VIEW ALL</button>
+            </div>
+            <div class="sport-head-right">
+                <div class="sport-head-content">
+                    <img src="image/perfume.webp" alt="">
+                    <p>Deodrant & Perfume</p>
+                    <span>UP to 60% Off</span>
+                    <span class="greycolor">Denver , Fogg & More</span>
+                </div>
+                <div class="sport-head-content">
+                    <img src="image/baby gear.webp" alt="">
+                    <p>Baby Gear</p>
+                    <span>UP to 70% Off</span>
+                    <span class="greycolor">MeMee & More</span>
+                </div>
+                <div class="sport-head-content">
+                    <img src="image/rackets.webp" alt="">
+                    <p>Ultra Premimum Racquets</p>
+                    <span>UP to 60% Off</span>
+                    <span class="greycolor">li-ning , Adrenex & More</span>
+                </div>
+                <div class="sport-head-content">
+                    <img src="image/dumbell.webp" alt="">
+                    <p>Dumbbell</p>
+                    <span>UP to 50% Off</span>
+                    <span class="greycolor">PROWL, HRX & KRX</span>
+                </div>
+                <div class="sport-head-content">
+                    <img src="image/remotecontro.webp" alt="">
+                    <p>Remote Control Toy</p>
+                    <span>UP to 80% Off</span>
+                    <span class="greycolor">Buy Now!</span>
+                </div>
+                <div class="sport-head-content">
+                    <img src="image/feeding.webp" alt="">
+                    <p>Feeding & Nursing</p>
+                    <span>UP to 50% Off</span>
+                    <span class="greycolor">Breast Pumps & More</span>
+                </div>
+                <div class="sport-head-content">
+                    <img src="image/breakfast.webp" alt="">
+                    <p>Breakfast Cereal</p>
+                    <span>UP to 70% Off</span>
+                    <span class="greycolor">Oats , Muesli & More</span>
+                </div>
+            </div>
+        </div>
+
+        <!-- sport section End here -->
+
+        <div class="content-section">
+            <div class="content-head-section">
+                <p>
+                    <span class="greycolor"> Top Stories:</span> Brand Directory
+
+                </p>
+            </div>
+            <div class="content-head-section">
+                <p>
+                    <span class="greycolor"> MOST SEARCHED FOR ON FLIPKART:</span> Flipkart Axis Bank Super | Elite
+                    Credit
+                    card | Primebook Laptops |Bounce Infinity E1 |Buy Laptop on EMI | Infinix Zero Book Ultra | OPPO
+                    Reno8 5G |OPPO
+                    Reno8 Pro 5G |Fresh Flower Bouquet |Holi Gifts |Bouquet |Infinix ZERO BOOK| ULTRA Series Laptop|Sell
+                    Old
+                    Mobile Phones |Premium Laptops |Electronics Store|Phone cover|Vivo Y33|Infinix Y1 Plus|Okaya
+                    Electric
+                    Vehicles|bgauss| electric scooter|OPPO Reno7 Pro 5G|iPhone 13|iPhone 13 Pro|iPhone 13 Pro Max|iPhone
+                    13
+                    |MiniGoogle| Pixel 6a covers|Flipkart Quick|Ampere Magnus|Flipkart Help Centre|Online Boat
+                    Store|Covers
+                    from Rs 99|Flipkart Track Orders|Flipkart Manage Orders|Flipkart Return Orders|Flipkart Gift Cards
+                    Store|Flipkart Axis Bank Credit Card|Flipkart Pay Later.
+
+                </p>
             </div>
 
-         </div>
+        </div>
+
 
     </main>
 
