--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
             </p>
 
         </div>
+
+        <div class="search-icon-div">
         <input type="text" name="" id="" placeholder="Search for product, brands and more">
+        <div>
+        <i class="fa-solid fa-magnifying-glass"></i>
+
+        </div>
+        </div>
         <button>
             Login
         </button>
